# quality-assistance-app

./: .env.docker.example  .env.example  .gitignore  README.md  docker-compose.yml  quality-assistance-app.code-workspace
agent/: .dockerignore  .env.example  Dockerfile  pyproject.toml
agent/agents/quality_assistance/: __init__.py  agent.py
agent/app/: __init__.py  errors.py  main.py  schemas.py
agent/app/agent/: __init__.py  capabilities.py  config.py  registry.py  root_agent.py  router.py
agent/app/agent/builders/: __init__.py  root_agent_builder.py
agent/app/agent/descriptions/: root_agent_description.py
agent/app/agent/instructions/: root_agent_instruction.py
agent/app/agent/prompts/: __init__.py  _helpers.py  consolidated.py  root.py
agent/app/callbacks/: __init__.py  helpers.py  logger.py
agent/app/config/: logging_config.py  settings.py
agent/app/middleware/: __init__.py  logging_middleware.py
agent/app/services/: __init__.py  runner_service.py
agent/app/tools/: __init__.py
agent/app/tools/stlc/: __init__.py  summarize_requirements.py
agent/app/utils/: __init__.py  llm.py
agent/src/quality_assistance_agent/: __init__.py  agent.py  agent_factory.py  runner_service.py  server.py  settings.py
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  docker-entrypoint.sh  pyproject.toml
backend/alembic/: README  env.py
backend/alembic/versions/: 20260517_021252_c343d3e8e3b5_initial_schema.py  20260517_031838_8dbea417dddd_widen_password_hash_column.py  20260517_120000_add_repository_connections.py
backend/src/quality_assistance_backend/: __init__.py  config.py  db.py  deps.py  main.py  migrations.py  models.py  schemas.py  security.py
backend/src/quality_assistance_backend/crypto/: __init__.py  fernet_encryption.py  password_manager.py
backend/src/quality_assistance_backend/models/: __init__.py  assistance_request.py  repository_connection.py  user.py
backend/src/quality_assistance_backend/routers/: auth.py
backend/src/quality_assistance_backend/routes/: __init__.py  assistance.py  auth.py  health.py  settings.py
backend/src/quality_assistance_backend/schemas/: __init__.py  assistance.py  auth.py  settings.py
docs/: SETUP-MAC.md  (+2 more)
(+89 files in other folders)
