[project]
name = "quality-assistance-agent"
version = "0.1.0"
description = "Google ADK agent service for quality engineering assistance"
readme = "README.md"
authors = [
    { name = "Satyam Vats", email = "satyam.vats@nagarro.com" }
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.1",
    "google-adk>=1.33.0",
    "httpx>=0.28.1",
    "python-dotenv>=1.2.2",
    "uvicorn[standard]>=0.47.0",
]

[project.scripts]
quality-assistance-agent = "quality_assistance_agent:main"

[build-system]
requires = ["uv_build>=0.11.14,<0.12.0"]
build-backend = "uv_build"
